--- a/templates/full-stack/packages/web/package.json.ejs
+++ b/templates/full-stack/packages/web/package.json.ejs
@@ -90,6 +90,7 @@
     "@tanstack/react-form": "^0.41.0"<% } %>
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.91.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0"
   }
