--- a/templates/effect-cli/src/cli.ts.ejs
+++ b/templates/effect-cli/src/cli.ts.ejs
@@ -1,6 +1,6 @@
 import { Args, Command, Options } from '@effect/cli';
 import { BunContext, BunRuntime } from '@effect/platform-bun';
-import { Console, Effect, Layer, pipe } from 'effect';
+import { Console, Effect, Layer, Option, pipe } from 'effect';
 import { name, version } from '../package.json';
 import { HelloService } from './services/hello.js';
 import { ConfigService, ConfigServiceLive } from './services/config.js';
@@ -27,7 +27,7 @@ const helloCommand = Command.make(
   ({ name, greeting, loud }) =>
     Effect.gen(function* () {
       const hello = yield* HelloService;
-      const targetName = name ?? 'World';
+      const targetName = Option.getOrElse(name, () => 'World');
       const message = yield* hello.greet(targetName, { greeting, loud });
       yield* Console.log(message);
     })
