--- a/templates/full-stack/packages/api/package.json.ejs
+++ b/templates/full-stack/packages/api/package.json.ejs
@@ -16,6 +16,9 @@
     "zod": "^3.24.0",
     "@hono/zod-validator": "^0.4.0"<% } %><% if (hasAddon('convex')) { %>,
     "convex": "^1.17.0"<% } %>
+  },
+  "devDependencies": {
+    "@types/bun": "latest"
   }
 <% } else if (apiFramework === 'express') { -%>
   "dependencies": {
@@ -24,6 +27,7 @@
     "convex": "^1.17.0"<% } %>
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/express": "^5.0.0"
   }
 <% } else if (apiFramework === 'elysia') { -%>
@@ -31,6 +35,9 @@
     "elysia": "^1.2.0"<% if (hasAddon('zod')) { %>,
     "zod": "^3.24.0"<% } %><% if (hasAddon('convex')) { %>,
     "convex": "^1.17.0"<% } %>
+  },
+  "devDependencies": {
+    "@types/bun": "latest"
   }
 <% } -%>
 }
