--- a/templates/full-stack/packages/api/tsconfig.json.ejs
+++ b/templates/full-stack/packages/api/tsconfig.json.ejs
@@ -15,7 +15,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
-    "types": ["bun-types"],
+    "types": ["bun"],
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
