--- a/templates/core/biome.json.ejs
+++ b/templates/core/biome.json.ejs
@@ -56,8 +56,8 @@
     "formatter": {
       "quoteStyle": "single",
       "jsxQuoteStyle": "double",
-      "trailingCommas": "es5",
-      "semicolons": "always",
+      "trailingCommas": "all",
+      "semicolons": "asNeeded",
       "arrowParentheses": "always",
       "bracketSpacing": true,
       "bracketSameLine": false,
