--- a/templates/api/src/server.ts.ejs
+++ b/templates/api/src/server.ts.ejs
@@ -5,6 +5,8 @@ import { logger } from 'hono/logger'
 import { prettyJSON } from 'hono/pretty-json'
 import { apiRoutes } from './routes/api.js'
 import { healthRoutes } from './routes/health.js'
+// BAKERY:INJECT:imports
+// BAKERY:END:imports
 
 const app = new Hono()
 
@@ -12,10 +14,14 @@ const app = new Hono()
 app.use('*', logger())
 app.use('*', cors())
 app.use('*', prettyJSON())
+// BAKERY:INJECT:middleware
+// BAKERY:END:middleware
 
 // Routes
 app.route('/health', healthRoutes)
 app.route('/api', apiRoutes)
+// BAKERY:INJECT:routes
+// BAKERY:END:routes
 
 // Root endpoint
 app.get('/', (c) => {
@@ -49,6 +55,8 @@ export default {
 import express from 'express'
 import { apiRoutes } from './routes/api.js'
 import { healthRoutes } from './routes/health.js'
+// BAKERY:INJECT:imports
+// BAKERY:END:imports
 
 const app = express()
 
@@ -67,10 +75,14 @@ app.use((req, res, next) => {
   }
   next()
 })
+// BAKERY:INJECT:middleware
+// BAKERY:END:middleware
 
 // Routes
 app.use('/health', healthRoutes)
 app.use('/api', apiRoutes)
+// BAKERY:INJECT:routes
+// BAKERY:END:routes
 
 // Root endpoint
 app.get('/', (_req, res) => {
@@ -103,10 +115,14 @@ export default app
 import { Elysia } from 'elysia'
 import { apiRoutes } from './routes/api.js'
 import { healthRoutes } from './routes/health.js'
+// BAKERY:INJECT:imports
+// BAKERY:END:imports
 
 const app = new Elysia()
   .use(healthRoutes)
   .use(apiRoutes)
+  // BAKERY:INJECT:routes
+  // BAKERY:END:routes
   .get('/', () => ({
     name: '<%= projectName %>',
     version: '0.1.0',
