--- a/templates/core/biome.json.ejs
+++ b/templates/core/biome.json.ejs
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**", "!**/node_modules", "!**/dist", "!**/coverage", "!**/*.lock", "!**/*.log"]
+    "includes": ["**", "!**/node_modules", "!**/dist", "!**/coverage", "!**/*.lock", "!**/*.log"<% if (webFramework === 'vue') { %>, "!**/*.vue"<% } %>]
   },
   "formatter": {
     "enabled": true,
